# mitmproxy-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  __init__.py  addon.py  models.py  privacy.py  pyproject.toml  storage.py  transport.py
.github/workflows/: ci.yml
mitmproxy_mcp/: __main__.py  addon.py  models.py  transport.py
mitmproxy_mcp/tools/: __init__.py  config.py  flows.py  intercept.py  replay.py
poc/: README.md  addon.py  test_poc.sh
tests/: conftest.py  test_config_tools.py  test_flow_tools.py  test_integration.py  test_intercept_tools.py  test_privacy.py  test_replay_tools.py  test_transport.py
tools/: __init__.py  config.py  flows.py  intercept.py  replay.py
